<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNumOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_one"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumOne"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/hint_num_two"
            android:inputType="numberSigned"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNumTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_two"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumTwo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/hint_num_two"
            android:inputType="numberSigned"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/txt_result"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSum"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:fontFamily="monospace"
            android:text="@string/btn_sumar"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRes"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:fontFamily="monospace"
            android:text="@string/btn_restar"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:fontFamily="monospace"
            android:text="@string/btn_multiplicar"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:fontFamily="monospace"
            android:text="@string/btn_dividir"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnErase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/btn_borrar"
            app:cornerRadius="0dp" />
    </LinearLayout>
</LinearLayout>